<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <!--标题-->
            <TextView
                android:id="@+id/top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/TopName"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--状态面板-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--面板2-->

                    <ImageView
                        android:id="@+id/m_mqtt"
                        android:layout_width="18dp"
                        android:layout_height="19dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/mqtt" />

                    <TextView
                        android:id="@+id/m_mqtt1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="未连接"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@+id/m_mqtt" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_state_two"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_marginBottom="1dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <!--橙色的标识 -->
                        <View
                            android:layout_width="5dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:background="#19D3E0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/Title1"
                            android:textColor="@color/black"
                            android:textSize="19sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="37dp"
                            android:layout_marginRight="15dp"
                            android:background="#C5C0C0" />
                        <!--运行状态-->
                        <TextView
                            android:id="@+id/standby_text_two"
                            android:layout_width="110dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="55dp"
                            android:text="@string/State1"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <!--运行状态的文本值-->
                        <TextView
                            android:id="@+id/yunXi"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="130dp"
                            android:layout_marginTop="53dp"
                            android:text="@string/State2"
                            android:textColor="#FFA500"
                            android:textSize="23sp"
                            android:textStyle="bold" />
                        <!--圆点-->
                        <ImageView
                            android:id="@+id/yunXi_point"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="250dp"
                            android:layout_marginTop="65dp"
                            android:src="@drawable/circle_green" />
                        <!--工作模式-->
                        <TextView
                            android:id="@+id/fault_text_two"
                            android:layout_width="110dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="105dp"
                            android:text="@string/State3"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <!--运行状态的文本值-->
                        <TextView
                            android:id="@+id/gongZuo"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="130dp"
                            android:layout_marginTop="103dp"
                            android:text="@string/State4"
                            android:textColor="#FFA500"
                            android:textSize="23sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/gongZuo_point"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="250dp"
                            android:layout_marginTop="115dp"
                            android:src="@drawable/circle_green" />
                        <!--                    控制按钮-->
                        <android.widget.Button
                            android:id="@+id/btn_open"
                            android:layout_width="180dp"
                            android:layout_height="40dp"
                            android:layout_below="@id/gongZuo"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/but_1"
                            android:text="@string/Open"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!--面板2-->
                <!--面板3-->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_now_two"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:layout_marginBottom="1dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginRight="15dp"
                        android:background="#C5C0C0" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="#19D3E0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/Title3"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <com.example.demo1.EchartView
                        android:id="@+id/lineChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_complete_two"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="1dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <!--橙色的标识3-->

                    <View
                        android:layout_width="5dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="#19D3E0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/Title2"
                        android:textColor="@color/black"
                        android:textSize="19sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginRight="15dp"
                        android:background="#C5C0C0" />
                    <!--数值-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37sp"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/current"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Current"
                            android:textColor="#FFA500"
                            android:textSize="23sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/power"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/Power"
                            android:textColor="#FFA500"
                            android:textSize="23sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/temperature"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/Temp"
                            android:textColor="#FFA500"
                            android:textSize="23sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <!--文本标识-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="85dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/current"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/power"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/temp"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>